fix: remove the consonle log for eslint error

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "Envato",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build --no-lint",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
